--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
      - uses: actions/checkout@v3
 
      - name: "Log In To Docker"
-       run: docker login --username ${{ secrets.DOCKER_USERNAME }} --password ${{ secrets.DOCKER_Token }}
+       run: docker login --username ${{ secrets.DOCKER_USERNAME }} --password ${{ secrets.DOCKER_PASSWORD }}
 
      - name: "Build Docker Image"
        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/sayad .
